# vim2hs

./: .gitignore  README.md  index.html  params.json
UltiSnips/: cabal.snippets  haskell.snippets
after/plugin/: tabular_haskell.vim
after/syntax/: markdown.vim
autoload/: cabal.vim  haskell.vim  jmacro.vim  lib.vim  vim2hs.vim
autoload/vim2hs/: cabal.vim  cabalconfig.vim  heist.vim  hpaste.py  hpaste.py3  hpaste.vim  jmacro.vim
autoload/vim2hs/haskell/: conceal.vim  editing.vim  markdown.vim  quasi.vim  snippets.vim  syntax.vim  tags.vim
compiler/: cabal.vim  hlint.vim  jmacro.vim
doc/: vim2hs.txt
ftdetect/: cabalconfig.vim  heist.vim  hsc.vim  jmacro.vim
ftplugin/: cabal.vim  haskell.vim
indent/: haskell.vim
plugin/: haskell_tags.vim  hpaste.py  hpaste.vim  offside.vim
syntax/: cabal.vim  cabalconfig.vim  haskell.vim  heist.vim  jmacro.vim  lhaskell.vim
syntax_checkers/: jmacro.vim
test/: bindings.hs  comments.hs  ffi.hs  haskell.mkdn  heist.tpl  hsp.hs  includeexpr.hs  jmacro.hs  keywords.hs  markdown.lhs  operators.hs  quasi.hs  shqq.hs  sql.hs  strings.hs  vim2hs.cabal
test/Namespace/: Module.hs
