name          : vim2hs
version       : 0.1.0
license       : BSD3
cabal-version : >= 1.10
build-type    : Simple

source-repository head
  type     : git
  location : git://github.com/dag/vim2hs.git

test-suite test-vim2hs
  type             : exitcode-stdio-1.0
  main-is          : vim2hs-tests.hs
  hs-source-dirs   : test
  default-language : Haskell2010
  ghc-options      : -Wall
  build-depends    : base == 4.*,
                     checkers,
                     HUnit,
                     QuickCheck,
                     quickcheck-instances,
                     quickcheck-properties,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     test-framework-th

benchmark bench-vim2hs
  type             : exitcode-stdio-1.0
  main-is          : vim2hs.hs
  hs-source-dirs   : bench
  default-language : Haskell2010
  ghc-options      : -Wall
  build-depends    : base == 4.*,
                     criterion

executable vim2hs
  main-is          : vim2hs.hs
  hs-source-dirs   : bin
  default-language : Haskell2010
  ghc-options      : -Wall
                     -threaded -rtsopts -with-rtsopts=-N
  build-depends    : base == 4.*,

library
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall
  exposed-modules  : Editor.Vim.Haskell
  build-depends    : base == 4.*
