name          : vim2hs
version       : 0.1.0
license       : BSD3
cabal-version : >= 1.10
build-type    : Simple
homepage      : https://github.com/dag/vim2hs

source-repository head
  type     : git
  location : git://github.com/dag/vim2hs.git

test-suite test-vim2hs
  type             : exitcode-stdio-1.0
  main-is          : test-vim2hs.hs
  hs-source-dirs   : test bin
  default-language : Haskell2010
  ghc-options      : -Wall
  other-modules    : Editor.Vim.Test
  build-depends    : base == 4.*,
                     vim2hs,
                     checkers,
                     HUnit,
                     QuickCheck,
                     quickcheck-instances,
                     quickcheck-properties,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     test-framework-th

benchmark bench-vim2hs
  type             : exitcode-stdio-1.0
  main-is          : bench-vim2hs.hs
  hs-source-dirs   : bench bin
  default-language : Haskell2010
  ghc-options      : -Wall
  other-modules    : Editor.Vim.Benchmark
  build-depends    : base == 4.*,
                     vim2hs,
                     criterion

executable vim2hs
  main-is          : vim2hs.hs
  hs-source-dirs   : bin
  default-language : Haskell2010
  ghc-options      : -Wall
                     -threaded -rtsopts -with-rtsopts=-N
  build-depends    : base == 4.*,
                     vim2hs

library
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall
  exposed-modules  : Editor.Vim.Haskell
  build-depends    : base == 4.*
